@@ -1,5 +1,6 @@
 Changelog for ghcid
 
+    Rename --notitle flag to --no-title
 0.6.5
     #82, properly deal with warning messages including spans
     #78, support boot files better
